<resources>

    <!--    Main screen -->
    <string name="settings">Settings</string>
    <string name="name_lastname_placeholder">Name Lastname</string>
    <string name="career_placeholder">Career</string>
    <string name="home_address_placeholder">Home address</string>
    <string name="fill_profile_proposal">Go to settings and fill out the profile</string>
    <string name="edit_profile_button">Edit profile</string>
    <string name="view_contacts_button">View my contacts</string>

    <!--    Auth screen -->
    <string name="greeting">Let\'s get acquainted</string>
    <string name="fill_form_proposal">Fill out the profile and go to the application!</string>
    <string name="email_placeholder">E-mail</string>
    <string name="password_placeholder">Password</string>
    <string name="remember_me_checkbox">Remember me</string>
    <string name="google_button" translatable="false">Google</string>
    <string name="or">or</string>
    <string name="register_button">Register</string>
    <string name="terms_agreement">By clicking Register you agree to our Terms and Conditions</string>
    <string name="have_acc_question">Already have an account?</string>
    <string name="sign_in_button">Sign in</string>

    <!--   Main activity   -->
    <string name="default_name">Name</string>
    <string name="default_lastname">Lastname</string>
    <string name="error_email">Email is invalid</string>
    <string name="password_length">length</string>
    <string name="required_error">required</string>


    <string name="app_name" translatable="false">Contacts</string>
    <string name="title_activity_contacts" translatable="false">ContactsActivity</string>

    <!-- Contacts page -->
    <string name="title">Contacts</string>
    <string name="add_contacts">Add contacts</string>
    <string name="default_career">Career</string>
    <string name="undo_remove_snackbar">Undo</string>
    <string name="contact_deleted_snackbar">Contact has been removed</string>
    <string name="add_contact">Add contact</string>
    <string name="username">Username</string>
    <string name="career">Career</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="save">save</string>

    <!--   Main activity   -->
    <string name="default_name_main">Name</string>
    <string name="profile">Profile</string>
    <string name="message">message</string>
    <string name="btn_logout">logout</string>
    <string name="contact_list_deleted_snackbar">Some contacts have been removed</string>
    <string name="your_profile_data">Your profile data</string>
    <string name="label_user_name">User name</string>
    <string name="label_phone">Mobile phone</string>
    <string name="btn_cancel">Cancel</string>
    <string name="hello">Hello!</string>
    <string name="enter_data_proposal">Enter your email and password below</string>
    <string name="forgot_pass">Forgot your password?</string>
    <string name="dont_have_acc_question">Don’t have account?</string>
    <string name="btn_signup">Sign up</string>
    <string name="btn_login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="recommendation">Recommendation</string>
    <string name="add">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="edit_profile">Edit profile</string>
    <string name="error_contacts">failed to get contacts list</string>
    <string name="error">An error occurred (no internet or server is not responding)</string>
    <string name="error_users">failed to get users list</string>
    <string name="error_contact_add">failed to add contact</string>
    <string name="error_contact_delete">failed to delete contact</string>
    <string name="error_user_registration">Registration failed or user exists</string>
    <string name="error_user_edit">Failed to edit user</string>
    <string name="error_user_get">Failed to get user</string>
    <string name="error_user_login">Failed to login</string>
    <string name="search_no_results">No results found</string>
    <string name="search_recommendation">You can see more contacts in the recommendation</string>
    <string name="incorrect_email_or_password">Incorrect email or password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="search">Search</string>
    <string name="notification_click_to_search">Click to search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Remove or change this placeholder text -->


</resources>