<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_half"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_half">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_settings"
            style="@style/text_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:layout_marginStart="@dimen/margin_middle"
            android:layout_marginTop="@dimen/margin_middle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/shapeableImageView"
            android:layout_width="113dp"
            android:layout_height="113dp"
            android:layout_marginTop="@dimen/margin_big"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_settings"
            app:shapeAppearanceOverlay="@style/circleImageView"
            app:srcCompat="@drawable/avatar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_lastname_placeholder"
            style="@style/text_big"
            android:layout_marginTop="@dimen/margin_big"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shapeableImageView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/career"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/career_placeholder"
            android:textColor="@color/color_text_secondary"
            style="@style/text_middle"
            android:layout_marginTop="@dimen/margin_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/full_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/address"
            style="@style/text_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_address_placeholder"
            android:textColor="@color/color_text_secondary"
            android:layout_marginTop="@dimen/margin_middle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/career" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_half"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/color_secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_half">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/ic_links_margin"
            app:layout_constraintEnd_toStartOf="@+id/ic_linkedin"
            app:layout_constraintTop_toTopOf="@+id/ic_linkedin"
            app:srcCompat="@drawable/ic_link_facebook" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_linkedin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ic_links_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_link_linkedin" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_instagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/ic_links_margin"
            app:layout_constraintStart_toEndOf="@+id/ic_linkedin"
            app:layout_constraintTop_toTopOf="@+id/ic_linkedin"
            app:srcCompat="@drawable/ic_link_instagram" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/text_middle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_btn_register"
            android:layout_margin="@dimen/margin_default"
            android:background="@drawable/btn_edit_profile"
            android:text="@string/edit_profile_button"
            android:textAllCaps="false"
            android:textColor="@color/color_text_additional"
            app:layout_constraintBottom_toTopOf="@+id/appCompatButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButton"
            style="@style/text_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_btn_register"
            android:layout_margin="@dimen/margin_default"
            android:background="@drawable/btn_view_contacts"
            android:text="@string/view_contacts_button"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>